Add links in pagination and change tests for it
